Update Event Catalog from 134c77bc1de22892e5bdade9712000a47af93ec6

--- a/docs/event-catalog/labtest.order.created.mdx
+++ b/docs/event-catalog/labtest.order.created.mdx
@@ -380,7 +380,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="billing_type" type="enum<string> | null">
-Available options: `client_bill`, `commercial_insurance`, `patient_bill_passthrough`.
+Available options: `client_bill`, `commercial_insurance`, `patient_bill_passthrough`, `patient_bill`.
 </ResponseField>
 <ResponseField name="icd_codes" type="anyOf | null">
 Any of:
@@ -433,8 +433,8 @@ Any of:
         "status": "collecting_sample.testkit.transit_customer"
       }
     ],
-    "health_insurace_id": "d38d2494-5f23-4f47-807e-8e79b82a442c",
-    "id": "795bfc71-e97d-450b-987f-ead30f8ad9c3",
+    "health_insurace_id": "44b5a98a-b178-4343-8b98-1477470f846c",
+    "id": "4eaec7fd-97f9-4e81-9bbb-987c17ff6ae7",
     "lab_test": {
       "description": "Cholesterol test",
       "method": "testkit",
@@ -458,9 +458,9 @@ Any of:
     "requisition_form_url": "https://www.example.com",
     "sample_id": "123456789",
     "status": "collecting_sample",
-    "team_id": "5382f9c9-a2d1-4686-9bac-08d2f42f68ec",
+    "team_id": "6e167bf9-978b-4f30-af35-4d77bd075037",
     "updated_at": "2020-01-01T00:00:00Z",
-    "user_id": "60e11623-015c-48b8-8d16-6142143635b3"
+    "user_id": "ae953978-9d4b-47c3-8d03-04b473c7ac45"
   },
   "event_type": "labtest.order.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
