Update outdated Vital Link documentation esp. regarding SDK-based providers

--- a/docs/wearables/connecting-providers/custom_widget.mdx
+++ b/docs/wearables/connecting-providers/custom_widget.mdx
@@ -2,6 +2,10 @@
 title: "Building a Custom Widget"
 ---
 
+import LinkSDKProvider from '/snippets/link-sdk-provider.mdx';
+
+<LinkSDKProvider />
+
 You may want to have your own custom Link widget to match your app's UI. This is useful for customers who don't want to use Vital link but still want to use the Vital API.
 It's worthwhile ensuring that you have read the [Auth Types](/docs/auth-types) documentation before proceeding. A full code example in React Native can be seen [here](https://github.com/tryVital/vital-connect-rn).
 
