--- a/docs/wearables/connecting-providers/launching_link.mdx
+++ b/docs/wearables/connecting-providers/launching_link.mdx
@@ -2,6 +2,10 @@
 title: "Launching Link"
 ---
 
+import LinkSDKProvider from '/snippets/link-sdk-provider.mdx';
+
+<LinkSDKProvider />
+
 <Steps>
 
 <Step number="1" title="Your Backend">
@@ -117,20 +121,14 @@ Use the Link Token to [launch the Link Widget](/wearables/vital-link/link_flow) 
 
 <Accordion title="Option 1: Opening the Link Widget by URL" icon="link" iconType="sharp-solid" defaultOpen>
 
-You can launch the Vital Link Widget by its URL:
+You can launch the Vital Link Widget using the Link Web URL (`link_web_url`) as provided by the
+[Generate a Link Token endpoint](/api-reference/link/generate-link-token):
 
 * If you have created the Link Token for a specific OAuth provider, Vital Link will dispatch
 the user automatically to the provider's sign-in page.
 
 * Otherwise, your user will be presented with a list of providers to connect to. You can
   customize the list via the `filter_on_providers` parameter when creating the Link Token.
-
-| Environment | URL format |
-| ----------- | ---------- |
-| Sandbox US  | `https://link.tryvital.io/?token={LINK_TOKEN}&env=sandbox&region=us` |
-| Sandbox EU  | `https://link.tryvital.io/?token={LINK_TOKEN}&env=sandbox&region=eu` |
-| Production US  | `https://link.tryvital.io/?token={LINK_TOKEN}&env=production&region=us` |
-| Production EU  | `https://link.tryvital.io/?token={LINK_TOKEN}&env=production&region=eu` |
 
 
 When the Link flow completes, the flow will redirect to the `redirect_url` you specified earlier
