Add more info and changelog

--- a/docs/changelog/lab-testing/api.mdx
+++ b/docs/changelog/lab-testing/api.mdx
@@ -1,6 +1,11 @@
 ---
 title: "API"
 ---
+
+### PSC Appointment Scheduling API (Oct 2024)
+Walk-in Phlebotomy orders now allow for appointment booking directly with Vital. 
+Refer to the [documentation](/lab/walk-in/order-lifecycle)
+
 ### Phlebotomy Availability API - Start Date Query (Sep 2024)
 You can now supply a `start_date` to the [Appointment Availability API](/api-reference/lab-testing/at-home-phlebotomy/appointment-availability).
 The API always responds with 14 days worth of slots.
