--- a/docs/wearables/connecting-providers/bring-your-own-oauth/sharing-credentials.mdx
+++ b/docs/wearables/connecting-providers/bring-your-own-oauth/sharing-credentials.mdx
@@ -58,9 +58,10 @@ existing OAuth callback endpoint.
 
 <Step title="Extend your existing OAuth callback endpoint with Vital awareness">
 When Vital Link initiates an OAuth authorization request, it populates the `state` query parameter
-with a specific format.
+with a specific format. This `state` query parameter is typically passed through with no change, when
+the provider performs the final redirect to the Redirect URI.
 
-Your OAuth callback endpoints can rely on this to differentiate the request
+Your OAuth callback endpoints can rely on the passthrough `state` parameter to differentiate the request
 origin — i.e., whether it is from Vital or from your own production systems.
 
 When you detect the request is originated from Vital, please issue a 307 Temporary
@@ -74,9 +75,12 @@ A JSON Web Token (JWT).
 <Accordion title="Claim payload schema" defaultOpen>
 | Key                     | Value                                           |
 | ----------------------- | ----------------------------------------------- |
+| `vital_link`            | Constant `true`                                 |
 | `team_id`               | Vital Team ID                                   |
 | `user_id`               | Vital User ID                                   |
-| `vital_link_token_id`   | Vital Link Token ID                             |
+| `token_id`              | Vital Link Token ID                             |
+| `env`                   | Vital Environment                               |
+| `region`                | Vital Region                                    |
 </Accordion>
 <Accordion title="Example" defaultOpen>
 ```python Python (FastAPI)
@@ -99,7 +103,7 @@ def handle_oauth_callback(
         and (state_parts := state_string.split(".", maxsplit=3))
         and len(state_parts) == 3
         and (unverified_claims := json.loads(state_parts[1]))
-        and "vital_link_token_id" in unverified_claims
+        and "vital_link" in unverified_claims
     ):
         base_url = "https://api.tryvital.io/v2/link/connect/PROVIDER"
         query = urlencode(request.query_params)
