--- a/docs/wearables/connecting-providers/bring-your-own-oauth/sharing-credentials.mdx
+++ b/docs/wearables/connecting-providers/bring-your-own-oauth/sharing-credentials.mdx
@@ -71,6 +71,14 @@ forwarded.
 <AccordionGroup>
 <Accordion title="Encoding" defaultOpen>
 A JSON Web Token (JWT).
+
+<Note>
+Vital does not guarantee a stable JWKS location nor a stable issuer on these JWT tokens.
+
+Verifying this specific JWT token is unnecessary, since the claim payload format does not open
+up any usable CSRF attack vector.
+</Note>
+
 </Accordion>
 <Accordion title="Claim payload schema" defaultOpen>
 | Key                     | Value                                           |
