Reorganize Horizon AI docs & Tweak site navigation

--- a/docs/api-reference/horizon-ai/aggregation/overview.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/overview.mdx
@@ -16,3 +16,18 @@ experimentations.
 <Card title="Aggregate in floating time" icon="timeline-arrow" horizontal>
 Work with time zone agnostic outputs that are indexed in the user's perception of time (i.e., _floating time_).
 </Card>
+
+## How can I use Aggregation API?
+
+<Warning>
+Aggregation API is currently in closed beta.
+The query schema and the behaviour is subject to change based on beta feedback.
+</Warning>
+
+You can make use of Vital Aggregation API through these channels:
+
+| Channel | Remarks |
+| ------- | ------- |
+| [Vital Horizon AI Python SDK](/api-reference/horizon-ai/python-sdk/getting-started) | The `vitalx-aggregation` package provides an expressive Python Query DSL with [Polars DataFrame](https://pola.rs) integrations. |
+| [Vital Aggregation API endpoint](/api-reference/horizon-ai/aggregation/query-one) | JSON API calls. |
+| [Typed bindings of Vital API](/home/libraries) | Call the Aggregation API in Go, Java, Node and Python. |
