--- a/docs/home/libraries.mdx
+++ b/docs/home/libraries.mdx
@@ -4,17 +4,24 @@ title: "Libraries"
 
 We have created a few libraries to help you integrate with the Vital API. We'll continue to add support for more libraries as we add more devices. Email [support@tryvital.io](mailto:support@tryvital.io) for specific library support.
 
-### Supported Libraries
+### Typed Bindings of Vital API
 
+These typed bindings track the Vital API OpenAPI Schema.
+
+| [Java](https://github.com/tryVital/vital-java)                       | Vital API Java client                                    |
+| [Go](https://github.com/tryVital/vital-go)                           | Vital API Go client                                      |
+| [vital-node](https://www.npmjs.com/package/@tryvital/vital-node)     | Vital API Node.js client                                 |
+| [vital-python](https://pypi.org/project/vital)                       | Vital API Python client                                  |
+
+### Mobile SDK
 |                                                                      |                                                      |
 | -------------------------------------------------------------------- | ---------------------------------------------------- |
 | [vital-ios](https://github.com/tryVital/vital-ios)                   | Vital iOS Client                                     |
 | [vital-android](https://github.com/tryVital/vital-android)           | Vital Android Client                                 |
 | [vital-flutter](https://github.com/tryVital/vital-flutter)           | Vital Flutter Client                                 |
 | [vital-react-native](https://github.com/tryVital/vital-react-native) | Vital React Native Client                            |
-| [vital-link](https://www.npmjs.com/package/@tryvital/vital-link)     | React Library for initializing link                  |
-| [Java](https://github.com/tryVital/vital-java)                       | Vital Java Client                                    |
-| [Go](https://github.com/tryVital/vital-go)                           | Vital Go Client                                      |
-| [vital-node](https://www.npmjs.com/package/@tryvital/vital-node)     | Vital Node Client                                    |
-| [vital-python](https://pypi.org/project/vital)                       | Python library for calling Vital API on your backend |
 | [vital-connect](https://github.com/tryVital/vital-connect-rn)        | Whitelabel App using Vital's API                     |
+
+### Web SDK
+
+| [vital-link](https://www.npmjs.com/package/@tryvital/vital-link)     | React Library for initializing link                  |
