Fix Libraries page layout

--- a/docs/home/libraries.mdx
+++ b/docs/home/libraries.mdx
@@ -8,8 +8,10 @@ We have created a few libraries to help you integrate with the Vital API. We'll 
 
 These typed bindings track the Vital API OpenAPI Schema.
 
-| [Java](https://github.com/tryVital/vital-java)                       | Vital API Java client                                    |
-| [Go](https://github.com/tryVital/vital-go)                           | Vital API Go client                                      |
+|                                                                      |                                                      |
+| -------------------------------------------------------------------- | ---------------------------------------------------- |
+| [vital-java](https://github.com/tryVital/vital-java)                       | Vital API Java client                                    |
+| [vital-go](https://github.com/tryVital/vital-go)                           | Vital API Go client                                      |
 | [vital-node](https://www.npmjs.com/package/@tryvital/vital-node)     | Vital API Node.js client                                 |
 | [vital-python](https://pypi.org/project/vital)                       | Vital API Python client                                  |
 
@@ -24,4 +26,6 @@ These typed bindings track the Vital API OpenAPI Schema.
 
 ### Web SDK
 
+|                                                                      |                                                      |
+| -------------------------------------------------------------------- | ---------------------------------------------------- |
 | [vital-link](https://www.npmjs.com/package/@tryvital/vital-link)     | React Library for initializing link                  |
