--- a/docs/api-reference/horizon-ai/aggregation/query-dsl/column-expressions.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/query-dsl/column-expressions.mdx
@@ -10,8 +10,10 @@ through table column expressions:
 
 | Table                                 | Python DSL            | JSON DSL                    
 | ------------------------------------- | --------------------- | ----------------------------
-| Sleep summary<br/>`sleep`             | `Sleep.col("$1")`     | `{ "sleep": "$1" }`
 | Activity daily summary<br/>`activity` | `Activity.col("$1")`  | `{ "activity": "$1" }`
+| Body summary<br/>`body`               | `Body.col("$1")`      | `{ "body": "$1" }`
+| Sleep summary<br/>`sleep`             | `Sleep.col("$1")`     | `{ "sleep": "$1" }`
+| Workout summary<br/>`workout`         | `Workout.col("$1")`   | `{ "workout": "$1" }`
 
 Each Table Column expression can select one column (a field) of the table (the Vital resource).
 You can use multiple Table Column expressions to select multiple columns in the same query.
@@ -32,10 +34,12 @@ are planned to be introduced gradually.
 Each Vital resource has a primary datetime index. Your Query Instruction can reference this datetime
 index using the special Index Column expression:
 
-| Table                                | Index                | Python DSL          | JSON DSL                    
-| ------------------------------------ | -------------------- | ------------------- | ----------------------------
-| Sleep summary<br/>`sleep`            | Session end datetime | `Sleep.index()`     | `{ "index": "sleep" }`
-| Activity daily summary<br/>`activity`| Calendar date        | `Activity.index()`  | `{ "index": "activity" }`
+| Table                                | Index                  | Python DSL          | JSON DSL                    
+| ------------------------------------ | ---------------------- | ------------------- | ----------------------------
+| Activity daily summary<br/>`activity`| Calendar date          | `Activity.index()`  | `{ "index": "activity" }`
+| Body summary<br/>`body`              | Measurement datetime   | `Body.index()`      | `{ "index": "body" }`
+| Sleep summary<br/>`sleep`            | Session end datetime   | `Sleep.index()`     | `{ "index": "sleep" }`
+| Workout summary<br/>`workout`        | Session start datetime | `Workout.index()`   | `{ "index": "workout" }`
 
 
 
@@ -51,4 +55,4 @@ You can refer to these columns using the special Group Key Column expression:
 | Group Key Columns | Python DSL       | JSON DSL 
 | ----------------- | ---------------- | -----------------------
 | All               | `group_key("*")` | `{ "group_key": "*" }`
-| `$N`-th              | `group_key($N)` | `{ "group_key": $N }`
+| The `$N`-th key   | `group_key($N)`  | `{ "group_key": $N }`
