Update docs to match current design

--- a/docs/wearables/connecting-providers/bring-your-own-oauth/sharing-credentials.mdx
+++ b/docs/wearables/connecting-providers/bring-your-own-oauth/sharing-credentials.mdx
@@ -64,38 +64,51 @@ the provider performs the final redirect to the Redirect URI.
 Your OAuth callback endpoints can rely on the passthrough `state` parameter to differentiate the request
 origin — i.e., whether it is from Vital or from your own production systems.
 
-When you detect the request is originated from Vital, please issue a 307 Temporary
-Redirect to the Vital OAuth callback endpoint with **all** the URL query parameters
-forwarded.
+When you detect the request is originated from Vital, please perform a 307 Temporary
+Redirect to the [Vital OAuth callback endpoint](#vital-oauth-callback-endpoint-url) and passing on _all_ the URL query parameters.
 
 <AccordionGroup>
 <Accordion title="Encoding" defaultOpen>
 A JSON Web Token (JWT).
 
-<Note>
-Vital does not guarantee a stable JWKS location nor a stable issuer on these JWT tokens.
-
-Verifying this specific JWT token is unnecessary, since the claim payload format does not open
-up any usable CSRF attack vector.
-</Note>
+<Warning>
+While you need not verify the signature of this JWT, to prevent Cross-Site Request Forgery attacks,
+you must check that the `aud` claim matches the expected [Vital Link API Base URL](#vital-link-api-base-url).
+</Warning>
 
 </Accordion>
 <Accordion title="Claim payload schema" defaultOpen>
 | Key                     | Value                                           |
 | ----------------------- | ----------------------------------------------- |
-| `vital_link`            | Constant `true`                                 |
+| `aud`                   | Vital Link API Base URL                         |
+| `sub`                   | Vital Link Session ID                           |
 | `team_id`               | Vital Team ID                                   |
 | `user_id`               | Vital User ID                                   |
-| `token_id`              | Vital Link Token ID                             |
-| `env`                   | Vital Environment                               |
-| `region`                | Vital Region                                    |
+</Accordion>
+<Accordion title="Vital Link API Base URL" defaultOpen>
+| Environment             | Base URL |
+| ----------------------- | -------- |
+| Production US           | `https://api.tryvital.io/v2/link` 
+| Production EU           | `https://api.eu.tryvital.io/v2/link` 
+| Sandbox US              | `https://api.sandbox.tryvital.io/v2/link` 
+| Sandbox EU              | `https://api.sandbox.eu.tryvital.io/v2/link` 
+</Accordion>
+<Accordion title="Vital OAuth callback endpoint URL" defaultOpen>
+| Environment             | Base URL |
+| ----------------------- | -------- |
+| Production US           | `https://api.tryvital.io/v2/link/connect/{PROVIDER}` 
+| Production EU           | `https://api.eu.tryvital.io/v2/link/connect/{PROVIDER}` 
+| Sandbox US              | `https://api.sandbox.tryvital.io/v2/link/connect/{PROVIDER}` 
+| Sandbox EU              | `https://api.sandbox.eu.tryvital.io/v2/link/connect/{PROVIDER}` 
 </Accordion>
 <Accordion title="Example" defaultOpen>
 ```python Python (FastAPI)
 import fastapi
 from urllib.parse import urlencode
 
-@router.get("/oauth/callback")
+VITAL_LINK_BASE_URL = "https://api.tryvital.io/v2/link"
+
+@router.get("/oauth_callback/fitbit")
 def handle_oauth_callback(
     request: fastapi.Request,
     state: Annotated[str, fastapi.Query()],
@@ -111,12 +124,11 @@ def handle_oauth_callback(
         and (state_parts := state_string.split(".", maxsplit=3))
         and len(state_parts) == 3
         and (unverified_claims := json.loads(state_parts[1]))
-        and "vital_link" in unverified_claims
+        and unverified_claims.get("aud") == VITAL_LINK_BASE_URL
     ):
-        base_url = "https://api.tryvital.io/v2/link/connect/PROVIDER"
         query = urlencode(request.query_params)
 
-        return fastapi.RedirectResponse(f"{base_url}?{query}")
+        return fastapi.RedirectResponse(f"{VITAL_LINK_BASE_URL}/link/fitbit?{query}")
 
 
     # Not a Vital Link JWT. Fallback to existing logic
