--- a/docs/wearables/connecting-providers/bring-your-own-oauth/sharing-credentials.mdx
+++ b/docs/wearables/connecting-providers/bring-your-own-oauth/sharing-credentials.mdx
@@ -47,6 +47,24 @@ existing production systems.
 
 ## Solution
 
+Vital recommends 
+
+```mermaid
+sequenceDiagram
+    participant Vital Link
+    participant Your API
+    participant BYOO Provider
+    actor User Agent
+    autonumber
+    Vital Link-->>User Agent: OAuth 2.0 Authorization Request URL
+    User Agent->>BYOO Provider: Navigate to URL (1)
+    BYOO Provider-->>User Agent: Prompt
+    User Agent-->>BYOO Provider: Approve or Deny
+    BYOO Provider->>Your API: Redirect
+    Your API->>Vital Link: Redirect
+```
+
+
 <Steps>
 
 <Step title="Keep your current OAuth application settings">
@@ -57,23 +75,28 @@ existing OAuth callback endpoint.
 </Step>
 
 <Step title="Extend your existing OAuth callback endpoint with Vital awareness">
-When Vital Link initiates an OAuth authorization request, it populates the `state` query parameter
-with a specific format. This `state` query parameter is typically passed through with no change, when
-the provider performs the final redirect to the Redirect URI.
 
-Your OAuth callback endpoints can rely on the passthrough `state` parameter to differentiate the request
-origin — i.e., whether it is from Vital or from your own production systems.
+Your OAuth callback endpoints can rely on the `state` query parameter to differentiate the request
+origin, i.e., whether it is from Vital or from your own production systems.
 
-When you detect the request is originated from Vital, please perform a 307 Temporary
-Redirect to the [Vital OAuth callback endpoint](#vital-oauth-callback-endpoint-url) and passing on _all_ the URL query parameters.
+OAuth requests originated from Vital would have the **Vital Link Token** as the `state` query parameter.
+Vital Link Token is a JSON Web Token (JWT), so you can use the _unverified claims_ of the JWT as a discriminator.
+
+When you detect a valid Vital Link Token, perform a `307 Temporary Redirect`
+to the [Vital OAuth callback endpoint](#vital-oauth-callback-endpoint-url) and passing on _all_ the URL query parameters.
+
+The exact JWT structure of the Vital Link Token is as follows:
+
 
 <AccordionGroup>
 <Accordion title="Encoding" defaultOpen>
 A JSON Web Token (JWT).
 
 <Warning>
-While you need not verify the signature of this JWT, to prevent Cross-Site Request Forgery attacks,
-you must check that the `aud` claim matches the expected [Vital Link API Base URL](#vital-link-api-base-url).
+You need not verify the signature of this JWT.
+
+To prevent Cross-Site Request Forgery attacks, you must still check that the `aud` claim matches the
+expected [Vital Link API Base URL](#vital-link-api-base-url).
 </Warning>
 
 </Accordion>
@@ -128,7 +151,7 @@ def handle_oauth_callback(
     ):
         query = urlencode(request.query_params)
 
-        return fastapi.RedirectResponse(f"{VITAL_LINK_BASE_URL}/link/fitbit?{query}")
+        return fastapi.RedirectResponse(f"{VITAL_LINK_BASE_URL}/connect/fitbit?{query}")
 
 
     # Not a Vital Link JWT. Fallback to existing logic
