--- a/docs/changelog/lab-testing/api.mdx
+++ b/docs/changelog/lab-testing/api.mdx
@@ -2,6 +2,12 @@
 title: "API"
 ---
 
+### Source Marker Identification for Results (Nov 2024)
+Results now feature the source, orderable marker from which they originated.
+Refer to the [documentation](/lab/results/result-formats)
+
+
+
 ### PSC Appointment Scheduling API (Oct 2024)
 Walk-in Phlebotomy orders now allow for appointment booking directly with Vital. 
 Refer to the [documentation](/lab/walk-in/order-lifecycle)
