--- a/docs/lab/results/result-formats.mdx
+++ b/docs/lab/results/result-formats.mdx
@@ -244,6 +244,7 @@ Vital identifies the source marker via the `source_markers` field.
       "provider_id": "082016",
       "source_markers": [
         {
+          "marker_id": 229,
           "name": "Testosterone Free, Profile I",
           "slug": "testosterone-free-profile-i",
           "provider_id": "140226"
