--- a/docs/api-reference/lab-testing/psc-schedulling/appointment-psc-cancellation-reasons.mdx
+++ b/docs/api-reference/lab-testing/psc-schedulling/appointment-psc-cancellation-reasons.mdx
@@ -1,5 +1,6 @@
 ---
 openapi: "GET /v3/order/psc/appointment/cancellation-reasons"
+title: "PSC Appointment Cancellation Reasons"
 ---
 
 <RequestExample>
