--- a/docs/lab/walk-in/locations.mdx
+++ b/docs/lab/walk-in/locations.mdx
@@ -52,6 +52,11 @@ If specific data regarding the PSC's is required, then you can also query the [`
 # Booking appointments at Patient Service Centers
 
 
+<Note>
+Currently only available for Quest
+</Note>
+
+
 Vital allows booking of appointments directly with the Patient Service Centers for some labs. In order to book these appointments, you can use the [PSC Appointment API](/api-reference/lab-testing/psc-schedulling/appointment-psc-availability).
 
 
